fix radial z-index + file input cancel

--- a/src/App.css
+++ b/src/App.css
@@ -128,6 +128,7 @@
   position:relative;
   width:210px;
   height:210px;
+  z-index: 3000;
 }
 
 .pieSlice {
